:memo: Docs : 헤더 및 푸터 구현한거 업데이트

--- a/docs/1.홈.md
+++ b/docs/1.홈.md
@@ -4,8 +4,8 @@
 
 ### 공통
 
-- [ ] header에는 솔로트립 로고가 있다. (피그마 다운로드)
-- [ ] footer에는 홈, 플레이스를 이동할 수 있는 네비게이션이 노출되어있다.
+- [x] header에는 솔로트립 로고가 있다. (피그마 다운로드)
+- [x] footer에는 홈, 플레이스를 이동할 수 있는 네비게이션이 노출되어있다.
 - [ ] footer에는 홈, 텍스트가 선택되어있는지 구분하여 개발한다.
 
 ### 로그인 전
