--- a/docs/0.공통.md
+++ b/docs/0.공통.md
@@ -2,9 +2,9 @@
 
 ## 필수 기능
 
-- [ ] 본 프로젝트는 하이브리드앱 형태로 구현되어있다. `웹 부분이 테스트 대상`이며, 앱은 테스트안한다.
+- [x] 본 프로젝트는 하이브리드앱 형태로 구현되어있다. `웹 부분이 테스트 대상`이며, 앱은 테스트안한다.
 - [ ] 크롬, 사파리에서도 동일하게 작동한다.
-- [ ] 모든 페이지에서 header, footer를 공통적으로 사용할 예정이다. 재사용 가능하도록 별도로 분리한다.
+- [x] 모든 페이지에서 header, footer를 공통적으로 사용할 예정이다. 재사용 가능하도록 별도로 분리한다.
 - [ ] 로그인, 솔플레이스로그등록 등 여러 페이지에서 등록/수정을 위한 폼/검증 라이브러리를 사용할 예정이다. 따라서, 폼/검증에 관련된 로직들을 재사용 가능하도록 별도로 분리한다. (라이브러리 사용 제한 없음)
 - [ ] 인증과 관련된 로직은 재사용 가능하도록 분리한다.
 - [ ] UI 컴포넌트(Button, Input, Modal 등)는 재사용 가능하도록 별도로 분리한다.
