:art: Design : 로그인 화면 퍼블리싱 1. 비로그인시 이메일과 비밀번호 기입가능 2. 이메일 비번 모두 입력되어 있을 때만 버튼 활성화

--- a/docs/1.홈.md
+++ b/docs/1.홈.md
@@ -10,8 +10,8 @@
 
 ### 로그인 전
 
-- [ ] 비로그인 시 이메일과 비밀번호를 기입할 수 있어야한다.
-- [ ] 이메일과 비밀번호가 모두 입력되어 있을 때만 버튼이 활성화 되어야 한다.
+- [x] 비로그인 시 이메일과 비밀번호를 기입할 수 있어야한다.
+- [x] 이메일과 비밀번호가 모두 입력되어 있을 때만 버튼이 활성화 되어야 한다.
 - [ ] 입력된 이메일과 비밀번호가 다를 경우 오류 알림이 실행되어야 한다.
 - [ ] 입력된 이메일과 비밀번호가 일치하지 않을 경우 이메일 input에 포커싱된다.
 
