--- a/docs/2.솔플레이스로그 목록.md
+++ b/docs/2.솔플레이스로그 목록.md
@@ -2,7 +2,7 @@
 
 ## 필수 기능
 
-- [ ] header가 보이지 않아야 한다.
+- [x] header가 보이지 않아야 한다.
 - [ ] footer에는 홈과 플레이스를 이동할 수 있는 네비게이션이 노출되어 있어야 하고,
       플레이스 아이콘과 텍스트 부분이 선택되어 있는 디자인으로 구성되어야 한다.
 - [x] `연필 그림`은 등록 버튼이며, 반드시 솔플레이스로그 카드 위에 우선적으로 노출되어야 한다.
