:heavy_plus_sign: Feat : 헤더, 푸터 조건부렌더링 조건 완료 / 리코일 헤더관리

--- a/docs/3.솔플레이스로그 등록.md
+++ b/docs/3.솔플레이스로그 등록.md
@@ -4,7 +4,7 @@
 
 ### 공통
 
-- [ ] footer가 보이지 않아야 한다.
+- [x] footer가 보이지 않아야 한다.
 - [ ] 유저의 로그인 상태를 검증할 수 있는 설계가 필요하다.
 - [ ] 페이지내에서 새로고침 시, 비로그인 상태로 노출이 되어야 한다.
 
@@ -16,10 +16,10 @@
 
 ### 로그인 후
 
-- [ ] header에는 `솔플레이스 로그 등록` 이라는 제목이 노출되어야 합니다.
-- [ ] 기입할 수 있는 모든 정보들은 폼/검증 라이브러리를 사용해서 구성되어야 합니다.
+- [x] header에는 `솔플레이스 로그 등록` 이라는 제목이 노출되어야 합니다.
+- [x] 기입할 수 있는 모든 정보들은 폼/검증 라이브러리를 사용해서 구성되어야 합니다.
       `참고) 라이브러리 선택에는 제한을 두지 않습니다.`
-- [ ] 모든 정보가 기입되어야만 등록 버튼이 활성화 됩니다.
+- [x] 모든 정보가 기입되어야만 등록 버튼이 활성화 됩니다.
 - [ ] 로그 등록에 성공하면 성공 alert과 함께 [메인 - 플레이스] 페이지로 이동해야 합니다.
 - [ ] 로그 등록 후 리스트로 이동시, 등록된 데이터가 리스트에서 보여져야 합니다.
 - [ ] 로그 등록에 실패할 경우 실패 알림을 alert으로 노출해주세요.
