--- a/docs/7.솔플레이스로그 수정삭제.md
+++ b/docs/7.솔플레이스로그 수정삭제.md
@@ -16,12 +16,12 @@
 
 ### 로그인 후
 
-- [ ] header에는 `[솔플레이스 로그 이름] 수정` 제목이 노출되어야 합니다.
+- [x] header에는 `[솔플레이스 로그 이름] 수정` 제목이 노출되어야 합니다.
       예시) 솔플레이스 로그의 이름이 “천국의 계단”이라면 = **_천국의 계단 수정_**
-- [ ] 페이지 진입시, 해당 솔플레이스로그의 모든 정보가 기입되어 있어야 합니다.
-- [ ] 기입할 수 있는 모든 정보들은 폼/검증 라이브러리를 사용해서 구성되어야 합니다.
+- [x] 페이지 진입시, 해당 솔플레이스로그의 모든 정보가 기입되어 있어야 합니다.
+- [x] 기입할 수 있는 모든 정보들은 폼/검증 라이브러리를 사용해서 구성되어야 합니다.
       `참고) 라이브러리 선택에는 제한을 두지 않습니다.`
-- [ ] 모든 정보가 기입되어야만 수정 버튼이 활성화 됩니다.
+- [x] 모든 정보가 기입되어야만 수정 버튼이 활성화 됩니다.
 - [ ] 로그 수정에 성공하면 수정 완료 alert과 함께 [메인 - 플레이스] 페이지로 이동해야 합니다. (메세지 자유기입)
 - [ ] 로그 삭제에 성공하면 삭제 완료 alert과 함께 [메인 - 플레이스] 페이지로 이동해야 합니다. (메세지 자유기입)
 - [ ] 로그 수정 후 리스트로 이동시, 수정된 내용이 목록에서 보여져야 합니다.
