:heavy_plus_sign: Feat : Pretendard 전역 폰트 설정

--- a/docs/0.공통.md
+++ b/docs/0.공통.md
@@ -8,4 +8,4 @@
 - [x] 로그인, 솔플레이스로그등록 등 여러 페이지에서 등록/수정을 위한 폼/검증 라이브러리를 사용할 예정이다. 따라서, 폼/검증에 관련된 로직들을 재사용 가능하도록 별도로 분리한다. (라이브러리 사용 제한 없음)
 - [x] 인증과 관련된 로직은 재사용 가능하도록 분리한다.
 - [x] UI 컴포넌트(Button, Input, Modal 등)는 재사용 가능하도록 별도로 분리한다.
-- [ ] Pretendard 폰트를 사용한다. (디자인 시스템과 동일하게)
+- [x] Pretendard 폰트를 사용한다. (디자인 시스템과 동일하게)
