--- a/docs/3.솔플레이스로그 등록.md
+++ b/docs/3.솔플레이스로그 등록.md
@@ -20,19 +20,19 @@
 - [x] 기입할 수 있는 모든 정보들은 폼/검증 라이브러리를 사용해서 구성되어야 합니다.
       `참고) 라이브러리 선택에는 제한을 두지 않습니다.`
 - [x] 모든 정보가 기입되어야만 등록 버튼이 활성화 됩니다.
-- [ ] 로그 등록에 성공하면 성공 alert과 함께 [메인 - 플레이스] 페이지로 이동해야 합니다.
-- [ ] 로그 등록 후 리스트로 이동시, 등록된 데이터가 리스트에서 보여져야 합니다.
+- [x] 로그 등록에 성공하면 성공 alert과 함께 [메인 - 플레이스] 페이지로 이동해야 합니다.
+- [x] 로그 등록 후 리스트로 이동시, 등록된 데이터가 리스트에서 보여져야 합니다.
 - [ ] 로그 등록에 실패할 경우 실패 알림을 alert으로 노출해주세요.
 
 ### 솔플레이스 사진
 
-- [ ] 사진은 `최대 5개`까지만 등록이 가능합니다.
+- [x] 사진은 `최대 5개`까지만 등록이 가능합니다.
 - [ ] 이미지 확장자가 아닌 파일은 추가할 수 없습니다.
 - [ ] `1MB`가 넘는 이미지는 추가할 수 없습니다.
-- [ ] 추가된 사진들은 미리보기 형태로 노출되어야 합니다.
-- [ ] 가장 먼저 등록된 사진에는 `대표` 뱃지가 추가되어야 합니다.
-- [ ] 추가된 사진은 삭제가 가능해야 합니다.
-- [ ] 추가된 사진의 개수만큼 카운트가 가능해야 합니다. (1개 추가시 1/5)
+- [x] 추가된 사진들은 미리보기 형태로 노출되어야 합니다.
+- [x] 가장 먼저 등록된 사진에는 `대표` 뱃지가 추가되어야 합니다.
+- [x] 추가된 사진은 삭제가 가능해야 합니다.
+- [x] 추가된 사진의 개수만큼 카운트가 가능해야 합니다. (1개 추가시 1/5)
 - [ ] 5개의 사진이 모두 추가되면 사진 추가 등록 버튼이 보이지 않아야 합니다.
 - [ ] 사진은 API를 통해 전송/등록 되어야 합니다.
 
