:heavy_plus_sign: Feat : 솔플 삭제 구현 및 스크롤 캐싱 체크해제

--- a/docs/2.솔플레이스로그 목록.md
+++ b/docs/2.솔플레이스로그 목록.md
@@ -9,4 +9,4 @@
 - [x] `연필 그림`을 클릭하면 [솔플레이스로그 등록] 페이지로 이동되어야 합니다.
 - [x] `솔플레이스로그 카드 그림`을 클릭하면 [솔플레이스로그 수정/삭제] 페이지로 이동되어야 한다.
 - [x] 스크롤이 하단에 닿을 때마다 6개의 새로운 데이터를 받아올 수 있도록 설계 되어야 한다.
-- [x] 스크롤을 일정 부분 내린 후, 다른 페이지로 이동하고 되돌아 왔을 때 이동 전의 스크롤 위치로 옮겨져야 한다.
+- [ ] 스크롤을 일정 부분 내린 후, 다른 페이지로 이동하고 되돌아 왔을 때 이동 전의 스크롤 위치로 옮겨져야 한다.
