--- a/docs/7.솔플레이스로그 수정삭제.md
+++ b/docs/7.솔플레이스로그 수정삭제.md
@@ -22,16 +22,16 @@
 - [x] 기입할 수 있는 모든 정보들은 폼/검증 라이브러리를 사용해서 구성되어야 합니다.
       `참고) 라이브러리 선택에는 제한을 두지 않습니다.`
 - [x] 모든 정보가 기입되어야만 수정 버튼이 활성화 됩니다.
-- [ ] 로그 수정에 성공하면 수정 완료 alert과 함께 [메인 - 플레이스] 페이지로 이동해야 합니다. (메세지 자유기입)
+- [x] 로그 수정에 성공하면 수정 완료 alert과 함께 [메인 - 플레이스] 페이지로 이동해야 합니다. (메세지 자유기입)
 - [x] 로그 삭제에 성공하면 삭제 완료 alert과 함께 [메인 - 플레이스] 페이지로 이동해야 합니다. (메세지 자유기입)
-- [ ] 로그 수정 후 리스트로 이동시, 수정된 내용이 목록에서 보여져야 합니다.
+- [x] 로그 수정 후 리스트로 이동시, 수정된 내용이 목록에서 보여져야 합니다.
 - [x] 로그 삭제 후 리스트로 이동시, 삭제된 내용이 목록에서 사라져야 합니다.
-- [ ] 로그 수정에 실패할 경우 실패 알림이 alert으로 노출되어야 합니다.
+- [x] 로그 수정에 실패할 경우 실패 알림이 alert으로 노출되어야 합니다.
 - [x] 로그 삭제에 실패할 경우 실패 알림이 alert으로 노출되어야 합니다.
 
 ### 솔플레이스 사진
 
-- [ ] 사진은 `최대 5개`까지만 등록이 가능합니다.
+- [x] 사진은 `최대 5개`까지만 등록이 가능합니다.
 - [ ] 이미지 확장자가 아닌 파일은 추가할 수 없습니다.
 - [ ] `1MB`가 넘는 이미지는 추가할 수 없습니다.
 - [x] 추가된 사진들은 미리보기 형태로 노출되어야 합니다.
