:heavy_plus_sign: Feat : middleware 하드코딩 설계완, 로그인검증완료

--- a/docs/3.솔플레이스로그 등록.md
+++ b/docs/3.솔플레이스로그 등록.md
@@ -5,14 +5,14 @@
 ### 공통
 
 - [x] footer가 보이지 않아야 한다.
-- [ ] 유저의 로그인 상태를 검증할 수 있는 설계가 필요하다.
+- [x] 유저의 로그인 상태를 검증할 수 있는 설계가 필요하다.
 - [ ] 페이지내에서 새로고침 시, 비로그인 상태로 노출이 되어야 한다.
 
 ### 로그인 전
 
-- [ ] header가 보이지 않아야 합니다.
-- [ ] 비로그인 시, 등록 페이지가 노출되지 않아야 하며 `"로그인 해주세요"` 버튼이 노출되어야 한다.
-- [ ] `"로그인 해주세요"` 버튼을 클릭하면 로그인 페이지가 있는 메인 - 홈으로 이동해야 한다.
+- [x] header가 보이지 않아야 합니다.
+- [x] 비로그인 시, 등록 페이지가 노출되지 않아야 하며 `"로그인 해주세요"` 버튼이 노출되어야 한다.
+- [x] `"로그인 해주세요"` 버튼을 클릭하면 로그인 페이지가 있는 메인 - 홈으로 이동해야 한다.
 
 ### 로그인 후
 
