:white_check_mark: Test : alert 생성 및 테스트 완

--- a/docs/3.솔플레이스로그 등록.md
+++ b/docs/3.솔플레이스로그 등록.md
@@ -22,7 +22,7 @@
 - [x] 모든 정보가 기입되어야만 등록 버튼이 활성화 됩니다.
 - [x] 로그 등록에 성공하면 성공 alert과 함께 [메인 - 플레이스] 페이지로 이동해야 합니다.
 - [x] 로그 등록 후 리스트로 이동시, 등록된 데이터가 리스트에서 보여져야 합니다.
-- [ ] 로그 등록에 실패할 경우 실패 알림을 alert으로 노출해주세요.
+- [x] 로그 등록에 실패할 경우 실패 알림을 alert으로 노출해주세요.
 
 ### 솔플레이스 사진
 
