--- a/docs/2.솔플레이스로그 목록.md
+++ b/docs/2.솔플레이스로그 목록.md
@@ -2,6 +2,11 @@
 
 ## 필수 기능
 
+### 로그인 전
+- [x] 비로그인 상태에서는 조회 리스트가 노출되면 안된다.
+
+### 로그인 후
+
 - [x] header가 보이지 않아야 한다.
 - [x] footer에는 홈과 플레이스를 이동할 수 있는 네비게이션이 노출되어 있어야 하고,
       플레이스 아이콘과 텍스트 부분이 선택되어 있는 디자인으로 구성되어야 한다.
